why this so difficult; probably my poor design choices